<?xml version="1.0"?>
<package format="2">
    <name>rcdiscover</name>
    <version>1.1.7</version>
    <description>
        This package contains tools for the discovery of Roboception devices via GigE Vision.
    </description>

    <maintainer email="felix.ruess@roboception.de">Felix Ruess</maintainer>

    <author email="heiko.hirschmueller@roboception.de">Heiko Hirschmueller</author>
    <author email="raphael.schaller@roboception.de">Raphael Schaller</author>

    <license>BSD</license>

    <url type="repository">https://github.com/roboception/rcdiscover</url>
    <url type="bugtracker">https://github.com/roboception/rcdiscover/issues</url>

    <buildtool_depend>cmake</buildtool_depend>

    <doc_depend>doxygen</doc_depend>
    <export>
        <build_type>cmake</build_type>
    </export>
</package>
